test/conformance/chainsaw/cli/.chainsaw.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/configuration-chainsaw-v1alpha2.json
apiVersion: chainsaw.kyverno.io/v1alpha2
kind: Configuration
metadata:
  name: configuration
spec:
  cleanup:
    delayBeforeCleanup: 3s
  discovery:
    fullName: true
  execution:
    failFast: true
    forceTerminationGracePeriod: 5s
  namespace:
    fastDelete: true
  timeouts:
    apply: 10s
